--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -3977,70 +3977,71 @@
     "#### **Key observations:**\n",
     "\n",
     "- All features are initially stored as text (object), including numeric-like fields such as square_feet, price_per_sqft, and price. This confirms the dataset is “uncleaned” and requires parsing before any statistical analysis or modeling.\n",
+    "The dataset is truly “uncleaned” and shows strong categorical contamination. Several categorical columns contain values that clearly belong to other fields. For example, transaction has 38 unique values and includes not only Resale/New Property but also values like Unfurnished/Furnished and numeric-looking tokens (e.g., “2/3”). Similarly, furnishing has 78 unique values and includes direction-like values (e.g., East) and numeric tokens, while facing has 176 unique values and contains non-directional entries (e.g., numeric tokens and location/road-related strings). This strongly suggests noisy scraping or column misalignment.\n",
     "\n",
-    "- After parsing, the main continuous variables (area_sqft, price_lakh, ppsqft) show strong right-skewness with extreme outliers, indicating a long tail of large/high-value listings.\n",
+    "- Missingness is concentrated in a small set of columns. description has the highest missing rate (~30.30%), followed by facing (~13.02%), price_per_sqft (~8.13%), furnishing (~7.51%), transaction (~2.30%), and floor (~0.99%). Most other columns are close to complete.\n",
     "\n",
-    "- The dataset likely contains mixed property types (e.g., apartments, houses, land/commercial), which explains unusually large area/price values and contributes to heavy-tailed distributions.\n",
+    "- Categorical distributions are highly imbalanced. A few dominant categories (e.g., Unfurnished for furnishing, East for facing, and Super Area/Carpet Area for areaWithType) account for a large portion of the dataset, which affects both interpretation and modeling.\n",
     "\n",
-    "- Discrete variables such as bhk are concentrated around common values (mostly 2–3 BHK), while floor-related features suggest many listings come from mid- to high-rise buildings (with some listings at very high floors).\n",
+    "- Parsed numeric variables are heavily right-skewed with extreme outliers. After converting text fields to numeric features, area_sqft, price_lakh, and ppsqft show long right tails and extreme values—expected in real estate but amplified here by mixed property types and data errors.\n",
+    "\n",
+    "- The most consistent relationship is within floor-related variables. Correlation patterns indicate a strong association between floor_num and total_floors (both describe building structure), while correlations involving price_lakh are weaker due to noise, outliers, and mixed listing types.\n",
     "\n",
     "#### **Data quality issues identified:**\n",
     "\n",
-    "- Duplicate rows exist (109 duplicates), consistent with scraped listing datasets.\n",
+    "- **Duplicate records exist:** there are 109 duplicated rows, likely caused by repeated listings or scraping artifacts.\n",
     "\n",
-    "- Missingness is non-trivial in several columns, especially description (~30%) and also facing, furnishing, and price_per_sqft.\n",
+    "- **Severe categorical inconsistency / field contamination:** values appear in the “wrong” columns (e.g., floor containing transaction-like values such as “Resale”), which can invalidate group-based conclusions unless corrected.\n",
     "\n",
-    "- Placeholders and unparseable formats exist (e.g., price = \"Call for Price\"), which creates missing values after numeric conversion.\n",
+    "- **Placeholder and special values:** the raw price field includes “Call for Price”, which becomes missing after parsing and reduces usable records for price-based analysis.\n",
     "\n",
-    "- Column contamination/inconsistencies are present (e.g., floor sometimes contains values like \"Resale\"), suggesting misalignment or noisy extraction.\n",
+    "- **Outlier-driven instability:** especially for ppsqft, extreme values often coincide with implausible area entries or misformatted currency strings, suggesting that a portion of outliers are data errors, not genuine market extremes.\n",
     "\n",
     "#### **Preprocessing steps that will be necessary:**\n",
     "\n",
-    "- Remove duplicates and verify no fully empty rows (none observed).\n",
+    "- **Deduplication:** remove the 109 exact duplicates (keep one canonical row per listing).\n",
     "\n",
-    "- Parse and standardize numeric fields:\n",
+    "- **Robust numeric parsing + unit normalization:**\n",
     "\n",
-    "- Convert square_feet → area_sqft (unit normalization: sqft/sqm/acre, etc.)\n",
+    "    - square_feet → area_sqft (handle unit conversions such as sqft/sqm/acre)\n",
     "\n",
-    "- Convert price → price_lakh (Lakh/Cr conversion; treat “Call for Price” as missing)\n",
+    "    - price → price_lakh (convert Cr/Lakh; map “Call for Price” to missing)\n",
     "\n",
-    "- Convert price_per_sqft → numeric ppsqft\n",
+    "    - price_per_sqft → numeric ppsqft\n",
     "\n",
-    "- Parse floor → floor_num, total_floors, and optionally floor_ratio\n",
+    "    - floor → floor_num, total_floors, and floor_ratio\n",
     "\n",
-    "- Extract bhk from property_name where missing\n",
+    "    - Extract bhk from property_name\n",
     "\n",
-    "- Clean categorical fields: normalize casing/spacing, merge equivalent labels, and handle contaminated values (rule-based cleaning or mark invalid as missing).\n",
+    "- **Categorical cleaning and validation (high priority):**\n",
     "\n",
-    "- Handle outliers using robust strategies (log transform for price/area, domain-based filtering/capping, or segmenting by property type).\n",
+    "  - Normalize text (case/whitespace), merge equivalent labels\n",
     "\n",
-    "#### **Missing value handling plan:**\n",
+    "  - Detect and handle contaminated values (rule-based reassignment if reliable; otherwise set to missing or filter invalid rows)\n",
     "\n",
-    "- Keep/ignore description for baseline models (optional NLP later)\n",
+    "- **Outlier handling:** apply log transforms for heavy-tailed variables and use domain-based thresholds; consider segmenting analysis by inferred property type (residential vs land/commercial).\n",
     "\n",
-    "- Impute/assign “Unknown” for certain categorical fields\n",
-    "\n",
-    "- Treat parse failures as missing and document them\n",
+    "- **Missing data strategy:** drop or ignore description in baseline models; treat certain missing categories as “Unknown”; document parse-failure as missingness.\n",
     "\n",
     "#### **Interesting patterns that could lead to research questions:**\n",
     "\n",
-    "- Potential price differences by transaction type (New vs Resale), furnishing status, facing direction, and status (Ready to Move vs possession timeline) after cleaning.\n",
+    "- Differences in price and price-per-sqft by transaction type (New vs Resale), furnishing, facing, and status after category cleanup.\n",
     "\n",
-    "- Strong candidates for modeling: how area, BHK, and price-per-sqft jointly explain price (likely better under log scale).\n",
+    "- How strongly area, BHK, and ppsqft explain price under log scaling.\n",
     "\n",
-    "- Whether floor position / building height (floor ratio, total floors) has a measurable relationship with price.\n",
+    "- Whether floor level / building height (floor_ratio, total_floors) shows systematic effects on pricing after removing invalid floor records.\n",
     "\n",
     "## 6.2. Red Flags\n",
     "\n",
-    "- Mixed property categories (apartment/house/land/commercial) can heavily distort distributions and correlations if analyzed as a single population; segmentation may be required for valid insights.\n",
+    "- Category contamination is the most serious concern. If transaction, furnishing, facing, and floor are not cleaned and validated, any grouped statistics or comparisons may be misleading.\n",
     "\n",
-    "- Extreme outliers in area_sqft, price_lakh, and especially ppsqft include cases that look implausible and may represent data errors (e.g., unrealistically small areas paired with enormous ppsqft).\n",
+    "- Extreme outliers—especially in ppsqft—include implausible cases, indicating likely data-entry/parsing errors (e.g., unrealistic areas paired with enormous ppsqft). Models can become unstable without robust treatment.\n",
     "\n",
-    "- Field contamination (e.g., floor containing \"Resale\") indicates the dataset may include misaligned records, which can affect any category-based analysis unless corrected.\n",
+    "- Mixed property types (apartments/houses/land/commercial) distort distributions and correlations; segmentation may be required to draw valid conclusions.\n",
     "\n",
-    "- High missingness in description limits the reliability of text-based insights; using this field may require careful handling or exclusion in baseline analysis.\n",
+    "- High missingness in description (~30%) limits text-based insights unless carefully handled.\n",
     "\n",
-    "- The dataset is limited to one city (Surat) and lacks richer context (e.g., geocoordinates, time of listing), which may limit generalizability and the interpretability of some results."
+    "- Scope limitations: the dataset is limited to a single city (Surat) and lacks richer context (e.g., standardized locality encoding, listing date/time), which reduces generalizability and prevents time-based market analysis."
    ]
   },
   {
