--- a/notebooks/03_data_preprocessing.ipynb
+++ b/notebooks/03_data_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 62,
    "id": "1280ecec",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,7 @@
     "from mpl_toolkits.axes_grid1.inset_locator import inset_axes\n",
     "import re\n",
     "sns.set(style=\"whitegrid\")\n",
+    "plt.rcParams['figure.figsize'] = (14, 6)\n",
     "\n",
     "df = pd.read_csv(\"../data/raw/surat_uncleaned.csv\")"
    ]
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 63,
    "id": "10ece487",
    "metadata": {},
    "outputs": [],
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 64,
    "id": "1da59261",
    "metadata": {},
    "outputs": [],
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 65,
    "id": "25b109a3",
    "metadata": {},
    "outputs": [],
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 66,
    "id": "9e307e67",
    "metadata": {},
    "outputs": [],
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 67,
    "id": "1a938990",
    "metadata": {},
    "outputs": [],
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 68,
    "id": "2fa7e9df",
    "metadata": {},
    "outputs": [],
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 69,
    "id": "b23ebf35",
    "metadata": {},
    "outputs": [],
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 70,
    "id": "29654a78",
    "metadata": {},
    "outputs": [],
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 71,
    "id": "3d2df047",
    "metadata": {},
    "outputs": [],
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 72,
    "id": "cbde0562",
    "metadata": {},
    "outputs": [],
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 73,
    "id": "ad517230",
    "metadata": {},
    "outputs": [],
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 74,
    "id": "f85cded7",
    "metadata": {},
    "outputs": [
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 75,
    "id": "16bf385b",
    "metadata": {},
    "outputs": [],
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 76,
    "id": "1b7307ce",
    "metadata": {},
    "outputs": [],
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 77,
    "id": "5e943b49",
    "metadata": {},
    "outputs": [
@@ -374,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 78,
    "id": "e7755b36",
    "metadata": {},
    "outputs": [],
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 79,
    "id": "354a642d",
    "metadata": {},
    "outputs": [],
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 80,
    "id": "0839a6e7",
    "metadata": {},
    "outputs": [
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 81,
    "id": "08307477",
    "metadata": {},
    "outputs": [
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 82,
    "id": "cf32d223",
    "metadata": {},
    "outputs": [],
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 83,
    "id": "ddae50b5",
    "metadata": {},
    "outputs": [
@@ -556,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 84,
    "id": "762c5755",
    "metadata": {},
    "outputs": [
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 85,
    "id": "0202fb7b",
    "metadata": {},
    "outputs": [],
@@ -604,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 86,
    "id": "04095ba0",
    "metadata": {},
    "outputs": [],
@@ -616,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 87,
    "id": "7e8fa072",
    "metadata": {},
    "outputs": [
@@ -736,7 +737,7 @@
        "num_floor       3255     23                                      13   811"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 88,
    "id": "e0115f10",
    "metadata": {},
    "outputs": [
@@ -795,88 +796,88 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1486</th>\n",
-       "      <td>1 BHK Apartment for Sale in Orchid Blossom, Pa...</td>\n",
-       "      <td>Carpet Area</td>\n",
-       "      <td>422.0</td>\n",
-       "      <td>Resale</td>\n",
-       "      <td>Ready to Move</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Unfurnished</td>\n",
-       "      <td>4462.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>2 BHK Apartment for Sale in Kamrej Road Surat</td>\n",
-       "      <td>Carpet Area</td>\n",
-       "      <td>783.0</td>\n",
-       "      <td>Resale</td>\n",
-       "      <td>Ready to Move</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Unfurnished</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>232</th>\n",
-       "      <td>4 BHK Apartment for Sale in Udhna Surat</td>\n",
+       "      <th>4512</th>\n",
+       "      <td>5 BHK Apartment for Sale in Surya Heritage, Ve...</td>\n",
        "      <td>Super Area</td>\n",
-       "      <td>1360.0</td>\n",
-       "      <td>Resale</td>\n",
+       "      <td>7150.0</td>\n",
+       "      <td>New Property</td>\n",
        "      <td>Ready to Move</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Semi-Furnished</td>\n",
-       "      <td>2647.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>36.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>8503.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>608.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3974</th>\n",
+       "      <td>4 BHK Apartment for Sale in Atlanta Eliza, Ves...</td>\n",
+       "      <td>Carpet Area</td>\n",
+       "      <td>2248.0</td>\n",
+       "      <td>New Property</td>\n",
+       "      <td>Ready to Move</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>7791.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>323.0</td>\n",
        "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1531</th>\n",
-       "      <td>2 BHK Apartment for Sale in Althan Surat</td>\n",
-       "      <td>Super Area</td>\n",
-       "      <td>1305.0</td>\n",
-       "      <td>New Property</td>\n",
-       "      <td>Possession</td>\n",
-       "      <td>4</td>\n",
+       "      <th>769</th>\n",
+       "      <td>2 BHK Apartment for Sale in ASHTVINAYAK RESIDE...</td>\n",
+       "      <td>Carpet Area</td>\n",
+       "      <td>650.0</td>\n",
+       "      <td>Resale</td>\n",
+       "      <td>Ready to Move</td>\n",
+       "      <td>7</td>\n",
        "      <td>Unfurnished</td>\n",
-       "      <td>3851.0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>50.3</td>\n",
+       "      <td>3545.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>39.0</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3400</th>\n",
-       "      <td>3 BHK Apartment for Sale in Vesu Surat</td>\n",
+       "      <th>4309</th>\n",
+       "      <td>5 BHK Apartment for Sale in Avadh Ercole, Vesu...</td>\n",
        "      <td>Super Area</td>\n",
-       "      <td>1970.0</td>\n",
+       "      <td>5260.0</td>\n",
        "      <td>Resale</td>\n",
        "      <td>Possession</td>\n",
-       "      <td>9</td>\n",
+       "      <td>8</td>\n",
        "      <td>Unfurnished</td>\n",
-       "      <td>5490.0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>108.0</td>\n",
+       "      <td>5703.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3550</th>\n",
+       "      <td>3 BHK Apartment for Sale in Shaligram Flats, V...</td>\n",
+       "      <td>Super Area</td>\n",
+       "      <td>2200.0</td>\n",
+       "      <td>New Property</td>\n",
+       "      <td>Ready to Move</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>110.0</td>\n",
        "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>414</th>\n",
-       "      <td>2 BHK  House for Sale in Udhna Surat</td>\n",
+       "      <th>4095</th>\n",
+       "      <td>4 BHK Apartment for Sale in Adajan Surat</td>\n",
        "      <td>Carpet Area</td>\n",
-       "      <td>270.0</td>\n",
-       "      <td>Resale</td>\n",
-       "      <td>Ready to Move</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Semi-Furnished</td>\n",
-       "      <td>10648.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2238.0</td>\n",
+       "      <td>New Property</td>\n",
+       "      <td>Possession</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Unfurnished</td>\n",
+       "      <td>6100.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>248.0</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -884,38 +885,36 @@
       ],
       "text/plain": [
        "                                          property_name areaWithType  \\\n",
-       "1486  1 BHK Apartment for Sale in Orchid Blossom, Pa...  Carpet Area   \n",
-       "82        2 BHK Apartment for Sale in Kamrej Road Surat  Carpet Area   \n",
-       "232             4 BHK Apartment for Sale in Udhna Surat   Super Area   \n",
-       "1531           2 BHK Apartment for Sale in Althan Surat   Super Area   \n",
-       "3400             3 BHK Apartment for Sale in Vesu Surat   Super Area   \n",
-       "414                2 BHK  House for Sale in Udhna Surat  Carpet Area   \n",
+       "4512  5 BHK Apartment for Sale in Surya Heritage, Ve...   Super Area   \n",
+       "3974  4 BHK Apartment for Sale in Atlanta Eliza, Ves...  Carpet Area   \n",
+       "769   2 BHK Apartment for Sale in ASHTVINAYAK RESIDE...  Carpet Area   \n",
+       "4309  5 BHK Apartment for Sale in Avadh Ercole, Vesu...   Super Area   \n",
+       "3550  3 BHK Apartment for Sale in Shaligram Flats, V...   Super Area   \n",
+       "4095           4 BHK Apartment for Sale in Adajan Surat  Carpet Area   \n",
        "\n",
-       "      square_feet   transaction         status floor      furnishing  \\\n",
-       "1486        422.0        Resale  Ready to Move     4     Unfurnished   \n",
-       "82          783.0        Resale  Ready to Move     5     Unfurnished   \n",
-       "232        1360.0        Resale  Ready to Move     2  Semi-Furnished   \n",
-       "1531       1305.0  New Property     Possession     4     Unfurnished   \n",
-       "3400       1970.0        Resale     Possession     9     Unfurnished   \n",
-       "414         270.0        Resale  Ready to Move     0  Semi-Furnished   \n",
+       "      square_feet   transaction         status floor   furnishing  \\\n",
+       "4512       7150.0  New Property  Ready to Move    11  Unfurnished   \n",
+       "3974       2248.0  New Property  Ready to Move    10  Unfurnished   \n",
+       "769         650.0        Resale  Ready to Move     7  Unfurnished   \n",
+       "4309       5260.0        Resale     Possession     8  Unfurnished   \n",
+       "3550       2200.0  New Property  Ready to Move     6  Unfurnished   \n",
+       "4095       2238.0  New Property     Possession     9  Unfurnished   \n",
        "\n",
        "      price_per_sqft num_floor  price_lakh  bhk  \n",
-       "1486          4462.0         5        29.0  1.0  \n",
-       "82               NaN         5        50.0  2.0  \n",
-       "232           2647.0         2        36.0  4.0  \n",
-       "1531          3851.0        13        50.3  2.0  \n",
-       "3400          5490.0        13       108.0  3.0  \n",
-       "414          10648.0         2        23.0  2.0  "
+       "4512          8503.0        12       608.0  5.0  \n",
+       "3974          7791.0        20       323.0  4.0  \n",
+       "769           3545.0         7        39.0  2.0  \n",
+       "4309          5703.0        12       300.0  5.0  \n",
+       "3550          5000.0        12       110.0  3.0  \n",
+       "4095          6100.0        13       248.0  4.0  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmp = df.copy()\n",
-    "\n",
     "def parse_area_sqft(s):\n",
     "    if pd.isna(s): \n",
     "        return np.nan\n",
@@ -972,19 +971,19 @@
     "    m = re.search(r\"(\\d+)\\s*bhk\", str(s), flags=re.IGNORECASE)\n",
     "    return float(m.group(1)) if m else np.nan\n",
     "\n",
-    "tmp[\"square_feet\"]  = tmp[\"square_feet\"].apply(parse_area_sqft)\n",
-    "tmp[\"price_per_sqft\"]     = tmp[\"price_per_sqft\"].apply(parse_ppsqft)\n",
-    "tmp[\"price_lakh\"] = tmp[\"price\"].apply(parse_price_lakh)\n",
-    "tmp[\"bhk\"]        = tmp[\"property_name\"].apply(parse_bhk_from_name)\n",
+    "df[\"square_feet\"]  = df[\"square_feet\"].apply(parse_area_sqft)\n",
+    "df[\"price_per_sqft\"]     = df[\"price_per_sqft\"].apply(parse_ppsqft)\n",
+    "df[\"price_lakh\"] = df[\"price\"].apply(parse_price_lakh)\n",
+    "df[\"bhk\"]        = df[\"property_name\"].apply(parse_bhk_from_name)\n",
     "\n",
-    "tmp.drop(columns=\"price\", inplace=True)\n",
-    "\n",
-    "tmp.sample(6)"
+    "df.drop(columns=\"price\", inplace=True)\n",
+    "df = df.dropna(subset=[\"square_feet\", \"price_per_sqft\", \"price_lakh\", \"bhk\"])\n",
+    "df.sample(6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 89,
    "id": "98400ef8",
    "metadata": {},
    "outputs": [
@@ -1022,42 +1021,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>square_feet</th>\n",
-       "      <td>3255.0</td>\n",
-       "      <td>3136.707856</td>\n",
-       "      <td>73656.384944</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>975.0</td>\n",
-       "      <td>1350.0</td>\n",
-       "      <td>2152.0</td>\n",
+       "      <td>3003.0</td>\n",
+       "      <td>3299.282735</td>\n",
+       "      <td>76682.724029</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>2202.0</td>\n",
        "      <td>4.198405e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>price_per_sqft</th>\n",
-       "      <td>3006.0</td>\n",
-       "      <td>5289.017299</td>\n",
-       "      <td>7058.149277</td>\n",
+       "      <td>3003.0</td>\n",
+       "      <td>5284.669331</td>\n",
+       "      <td>7054.589076</td>\n",
        "      <td>4.0</td>\n",
        "      <td>3611.0</td>\n",
        "      <td>4500.0</td>\n",
-       "      <td>5636.5</td>\n",
+       "      <td>5636.0</td>\n",
        "      <td>1.944440e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>price_lakh</th>\n",
-       "      <td>3113.0</td>\n",
-       "      <td>131.257694</td>\n",
-       "      <td>997.255700</td>\n",
+       "      <td>3003.0</td>\n",
+       "      <td>133.329471</td>\n",
+       "      <td>1015.195833</td>\n",
        "      <td>5.0</td>\n",
        "      <td>45.0</td>\n",
-       "      <td>72.8</td>\n",
-       "      <td>133.0</td>\n",
+       "      <td>74.5</td>\n",
+       "      <td>135.0</td>\n",
        "      <td>5.344400e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>bhk</th>\n",
-       "      <td>3252.0</td>\n",
-       "      <td>2.798585</td>\n",
-       "      <td>1.068994</td>\n",
+       "      <td>3003.0</td>\n",
+       "      <td>2.856810</td>\n",
+       "      <td>1.054230</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>3.0</td>\n",
@@ -1070,32 +1069,47 @@
       ],
       "text/plain": [
        "                 count         mean           std  min     25%     50%  \\\n",
-       "square_feet     3255.0  3136.707856  73656.384944  1.0   975.0  1350.0   \n",
-       "price_per_sqft  3006.0  5289.017299   7058.149277  4.0  3611.0  4500.0   \n",
-       "price_lakh      3113.0   131.257694    997.255700  5.0    45.0    72.8   \n",
-       "bhk             3252.0     2.798585      1.068994  1.0     2.0     3.0   \n",
+       "square_feet     3003.0  3299.282735  76682.724029  3.0  1000.0  1400.0   \n",
+       "price_per_sqft  3003.0  5284.669331   7054.589076  4.0  3611.0  4500.0   \n",
+       "price_lakh      3003.0   133.329471   1015.195833  5.0    45.0    74.5   \n",
+       "bhk             3003.0     2.856810      1.054230  1.0     2.0     3.0   \n",
        "\n",
        "                   75%           max  \n",
-       "square_feet     2152.0  4.198405e+06  \n",
-       "price_per_sqft  5636.5  1.944440e+05  \n",
-       "price_lakh       133.0  5.344400e+04  \n",
+       "square_feet     2202.0  4.198405e+06  \n",
+       "price_per_sqft  5636.0  1.944440e+05  \n",
+       "price_lakh       135.0  5.344400e+04  \n",
        "bhk                3.0  1.000000e+01  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tmp.describe().T"
+    "df.describe().T"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dc46732d",
+   "id": "ff8827b7",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 4. Save purified data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "2a2446d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save cleaned data as CSV\n",
+    "df.to_csv(\"../data/processed/surat_cleaned.csv\", index=False)\n",
+    "# save as numpy binary file\n",
+    "np.save(\"../data/processed/surat_cleaned.npy\", df.to_records(index=False))"
+   ]
   }
  ],
  "metadata": {
