--- a/notebooks/Q1.ipynb
+++ b/notebooks/Q1.ipynb
@@ -30,6 +30,7 @@
     "\n",
     "## 4.1 Research Question 1: Unit Price Efficiency Analysis\n",
     "**The Question**\n",
+    "\n",
     "How does the relationship between property size (`square_feet`) and unit price (`price_per_sqft`) vary across different BHK configurations (1, 2, 3, 4+) and area types (Super Area vs. Carpet Area)?\n",
     "\n",
     "Specifically: Does a specific **\"area threshold\"** exist where increasing the square footage no longer results in a competitive unit price (diminishing returns), and does this threshold differ between BHK groups?\n",
@@ -41,10 +42,7 @@
     "    * **Home Buyers:** To identify \"value-for-money\" properties and avoid paying a premium for inefficiently large spaces.\n",
     "    * **Investors:** To maximize rental yield potential by purchasing efficiently sized units.\n",
     "    * **Real Estate Agents:** To justify pricing strategies to sellers based on market data.\n",
-    "* **Real-world decision:** This informs the decision of choosing a property that offers the best utility-to-price ratio.\n",
-    "\n",
-    "## 4.2 Research Question 2: Neighborhood Price Premium\n",
-    "**The Question**\n"
+    "* **Real-world decision:** This informs the decision of choosing a property that offers the best utility-to-price ratio."
    ]
   },
   {
@@ -197,7 +195,17 @@
     "\n",
     "    - Identify if slope_post < 0 (evidence of diminishing returns)\n",
     "\n",
-    "    - Compare breakpoint magnitudes across BHK and area types"
+    "    - Compare breakpoint magnitudes across BHK and area types\n",
+    "\n",
+    "A ranked table of adjusted locality premiums/discounts (%, 95% CI, p-value)\n",
+    "\n",
+    "At least 2 plots, for example:\n",
+    "\n",
+    "Raw distribution of price_per_sqft across major localities (box/violin)\n",
+    "\n",
+    "Adjusted premiums/discounts with confidence intervals (bar plot with error bars)\n",
+    "\n",
+    "Optional diagnostics: model fit metrics (R²/AIC), residual checks, predicted vs actual plot"
    ]
   },
   {
